--- a/prater/config.yaml
+++ b/prater/config.yaml
@@ -43,7 +43,7 @@ CAPELLA_FORK_VERSION: 0x03001020
 CAPELLA_FORK_EPOCH: 162304
 # DENEB
 DENEB_FORK_VERSION: 0x04001020
-DENEB_FORK_EPOCH: 18446744073709551615
+DENEB_FORK_EPOCH: 231680
 
 # Time parameters
 # ---------------------------------------------------------------
