--- a/prater/config.yaml
+++ b/prater/config.yaml
@@ -41,7 +41,7 @@ BELLATRIX_FORK_EPOCH: 112260
 # Capella
 CAPELLA_FORK_VERSION: 0x03001020
 CAPELLA_FORK_EPOCH: 162304
-# DENEB
+# Deneb
 DENEB_FORK_VERSION: 0x04001020
 DENEB_FORK_EPOCH: 18446744073709551615
 
